--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
             <div class="block-6">
               <p class="description">Демография</p>
               <div class="block__content-6">
-                <p class="label-M">M</p>
-                <p class="label-W">Ж</p>
+                <p class="label-m">M</p>
+                <p class="label-w">Ж</p>
 
-                <p class="M-percent">61,3%</p>
-                <p class="W-percent">38,7%</p>
+                <p class="m-percent">61,3%</p>
+                <p class="w-percent">38,7%</p>
 
                 <img class="content-6" src="./img/Blocks/Pie.png" alt="image" />
               </div>
@@ -138,7 +138,7 @@
               </div>
             </div>
 
-            <di class="block-8">
+            <div class="block-8">
               <p class="description">Источники трафика</p>
               <div class="block__content-8">
                 <div class="web-content-8">
@@ -170,7 +170,7 @@
               <!-- AUDIENCE INTERESTS / ИНТЕРЕСЫ АУДИТОРИИ-->
                <div class="container-II">
                 <div class="audience-interests">
-                  <h3 class="audience-title">Интересы аудитории</h3>
+                  <h2 class="audience-title">Интересы аудитории</h2>
                 </div>
 
                 <ul class="interests-list">
@@ -202,7 +202,7 @@
                 <!-- SEARCH LIST / ПОИСКОВЫЕ ЗАПРОСЫ-->
 
                 <div class="search-list">
-                  <h3 class="searches">Поисковые запросы</h3>
+                  <h2 class="searches">Поисковые запросы</h2>
                 </div>
 
                 <ul class="party-list">
@@ -236,13 +236,13 @@
               <!-- OUR RESOURCES / НАШИ РЕСУРСЫ-->
 
               <div class="container-resources">
-                <h3 class="resources-title">Наши ресурсы</h3>
+                <h2 class="resources-title">Наши ресурсы</h2>
 
                 <ul class="resources-list">
                   <li>
                     <div class="main-btn-big-1">
                       <p class="left">
-                        Телеграм бот<span class="res-list"> Клубы Москвы</span>
+                        Телеграм бот<span class="res-list">Клубы Москвы</span>
                       </p>
                       <p class="right-1">
                         Подписчиков<span class="metric-value">5200</span>ER<span
@@ -300,9 +300,9 @@
                 <!-- POSSIBILITIES / ВОЗМОЖНОСТИ -->
 
                 <div class="container-possibilities">
-                  <h3 class="possibilities-title">
+                  <h2 class="possibilities-title">
                     Возможности для организаторов мероприятий
-                  </h3>
+                  </h2>
                   <div class="announcement">
                     <div class="block-announcement-1">
                       <p class="value-services">Публикация анонса</p>
@@ -346,7 +346,7 @@
                 <!-- FOR CLUBS & BARS -->
 
                 <div class="container-services">
-                  <h3 class="clubs-bars-title">Для клубов и баров</h3>
+                  <h2 class="clubs-bars-title">Для клубов и баров</h2>
                   <div class="clubs-bars-services">
                     <div class="block-services-1">
                       <p class="value-services">Персональный менеджер</p>
@@ -398,7 +398,7 @@
                 <!-- OPPORTUNITIES FOR BRANDS -->
 
                 <div class="container-brands">
-                  <h3 class="brands-title">Возможности для брендов</h3>
+                  <h2 class="brands-title">Возможности для брендов</h2>
                   <div class="brands-services">
                     <div class="block-brands-1">
                       <p class="value-services">Баннерная реклама</p>
