Fixed & Icons & SVG

--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
 
     <header class="section__outer section__header">
       <div class="section__inner">
-        <img src="./img/Header/Rectangle new 2646 .png" alt="image" />
+
+        <img src="./img/Header/Rectangle new 2646 .png" alt="image-main" />
+
+        <!-- DECORATION SVG -->
+        <img class="gradient" src="./img/Png/Gradient.png" alt="image">
+        <img class="eclipse__18" src="./img/Png/Ellipse 18.png" alt="image">
+        <img class="polygon" src="./img/Png/Polygon 3.png" alt="image">
+        <img class="eclipse__yellow" src="./img/Png/Eclipse.png" alt="image">
+        <!-- / DECORATION SVG / -->
+
         <div class="header__title">
           <h1>RUPOR.<span>EVENTS</span></h1>
         </div>
