the most recent version

--- a/index.html
+++ b/index.html
@@ -195,13 +195,19 @@
                   <li><a href="#!" class="main__btn">Финансы</a></li>
                   <li><a href="#!" class="main__btn">Электроника</a></li>
                   <li>
-                    <a href="#!" class="main__btn">Строительство, обустройство и ремонт</a>
+                    <a href="#!" class="main__btn__visible">Строительство, обустройство и ремонт</a>
+                  </li>
+                  <li>
+                    <a href="#!" class="main__btn__invisible">Строительство</a>
                   </li>
                   <li><a href="#!" class="main__btn">Бизнес</a></li>
                   <li><a href="#!" class="main__btn">Спорт</a></li>
                   <li><a href="#!" class="main__btn">Транспорт</a></li>
                   <li><a href="#!" class="main__btn">Недвижимость</a></li>
                   <li><a href="#!" class="main__btn">Работа</a></li>
+                  
+
+
                 </ul>
 
                 <!-- SEARCH LIST / ПОИСКОВЫЕ ЗАПРОСЫ -->
