THE MOST RECENT VERSION

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                       <a href="#!" class="main__btn__2">Суперметалл клуб</a>
                       <a href="#!" class="main__btn__2">Техно вечеринки в Москве</a>
                     </li>
-                      <img src="./img/SVG.png" class="arrow" alt="arrow" />
+                      <img src="./img/Vector_arrow.png" class="arrow" alt="arrow" />
                   </ul>
                 </div>
               </div>
