--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img class="eclipse__yellow" src="./img/Png/Eclipse.png" alt="image">
         <!-- / DECORATION SVG / -->
 
-        <div class="header__title">
+        <div class="header__title" data-text="RUPOR.EVENTS">
           <h1>RUPOR.<span>EVENTS</span></h1>
         </div>
         <div class="header__subtitle">
