The Most Recent Changes.

--- a/index.html
+++ b/index.html
@@ -320,6 +320,10 @@
                     Возможности для организаторов мероприятий
                   </h2>
                   <div class="announcement">
+                    <div class="block__publication">
+                      <p class="value__services__mobile">Публикация анонса</p>
+                    </div>
+
                     <div class="block__announcement__1">
                       <p class="value__services">Публикация анонса</p>
                     </div>
