The Most Recent Version

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <header class="section__outer section__header">
       <div class="section__inner">
 
-        <img src="./img/Header/Rectangle new 2646 .png" alt="image-main" />
+        <img src="./img/Header/Rectangle-new-2646.png" alt="image-main" />
 
         <!-- DECORATION SVG -->
         <img class="gradient" src="./img/Png/Gradient.png" alt="image">
-        <img class="eclipse__18" src="./img/Png/Ellipse 18.png" alt="image">
-        <img class="polygon" src="./img/Png/Polygon 3.png" alt="image">
+        <img class="eclipse__18" src="./img/Png/Ellipse-18.png" alt="image">
+        <img class="polygon" src="./img/Png/Polygon-3.png" alt="image">
         <img class="eclipse__yellow" src="./img/Png/Eclipse.png" alt="image">
         <!-- / DECORATION SVG / -->
 
@@ -102,22 +102,22 @@
 
                 <img
                   class="content__5 lines__bar"
-                  src="./img/Blocks/Frame lines.png"
+                  src="./img/Blocks/Frame-lines.png"
                   alt="image"
                 />
                 <img
                   class="content__5 line__msc"
-                  src="./img/Blocks/Horizontal Bar Msc.png"
+                  src="./img/Blocks/Horizontal-Bar-Msc.png"
                   alt="image"
                 />
                 <img
                   class="content__5 line__spb"
-                  src="./img/Blocks/Horizontal Bar SPb.png"
+                  src="./img/Blocks/Horizontal-Bar-SPb.png"
                   alt="image"
                 />
                 <img
                   class="content__5 axis__line"
-                  src="./img/Blocks/X Axis Labels.png"
+                  src="./img/Blocks/X-Axis-Labels.png"
                   alt="image"
                 />
               </div>
@@ -141,7 +141,7 @@
               <div class="block__content__7">
                 <img
                   class="content__7"
-                  src="./img/Blocks/Bar Chart and Labels.png"
+                  src="./img/Blocks/Bar-Chart-and-Labels.png"
                   alt="image"
                 />
               </div>
@@ -168,7 +168,7 @@
                 </div>
                 <img
                   class="content__8"
-                  src="./img/Blocks/Frame 1948755975.png"
+                  src="./img/Blocks/Frame-1948755975.png"
                   alt="image"
                 />
               </div>
